<resources>
    <string name="app_name">Chef2Share</string>
    <string name="avaliar">Avaliar</string>
    <string name="avaliacoes">Avaliações</string>
    <string name="avaliacao_atendimento">Atendimento</string>
    <string name="avaliacao_comentarios">Comentários</string>
    <string name="avaliacao_comida">Comida</string>
    <string name="avaliacao_local">Local</string>
    <string name="aguardando_pagamento">Aguardando o pagamento</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_divulgue_e_venda">Divulgue e Venda</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_alterar_senha">Alterar senha</string>
    <string name="btn_google_plus_logout">Sair</string>
    <string name="btn_buscar_e_comprar_evento">Buscar e comprar um evento</string>
    <string name="btn_criar_gerenciar_evento">Criar e gerenciar um evento</string>
    <string name="btn_procurar_eventos">PROCURAR</string>
    <string name="btn_mostrar_filtros">Mostrar filtros</string>
    <string name="btn_filtrar">Filtrar</string>
    <string name="btn_salvar_filtros">Salvar filtros</string>
    <string name="btn_comprar">Comprar</string>
    <string name="btn_agende_evento_exclusico">Agende um evento exclusivo</string>
    <string name="btn_compartilhe">Compartilhe</string>
    <string name="btn_fale_com_anfitriao">Fale com o anfitrião</string>
    <string name="btn_ver_convites">Ver convites</string>
    <string name="btn_pagar_agora">Pagar agora</string>
    <string name="btn_avalie">Avalie</string>
    <string name="btn_refazer_busca_regiao">refazer busca na região</string>
    <string name="btn_cadastrar_novo_local">+ cadastrar um novo local</string>
    <string name="btn_ir_para_eventos_que_vou">Eventos que vou</string>
    <string name="btn_add_fotos_local">&#160;&#160;adicionar fotos do local</string>
    <string name="btn_add_fotos_cardapio">&#160;&#160;adicionar fotos do cardápio</string>
    <string name="btn_proximo">Próximo</string>
    <string name="btn_cadastrar_novo_cardapio">+ cadastrar um novo cardápio</string>
    <string name="btn_checar_convite">Checar convite</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_publicar_evento">Publicar evento</string>
    <string name="btn_divulgar_evento">Divulgar evento</string>
    <string name="btn_confirmar_checkin">Confirmar checkin</string>
    <string name="btn_google_entrar">Entrar com o Google</string>
    <string name="btn_facebook_entrar">Entrar com o Facebook</string>
    <string name="btn_enviar_senha">Enviar senha</string>
    <string name="btn_procure_e_compre">Procure e Compre</string>
    <string name="btn_solicitar_em_outra_data">Solicitar em outra data</string>
    <string name="busca_tipo_evento">Tipo do evento</string>
    <string name="busca_tipo_cozinha">Tipo de cozinha</string>
    <string name="busca_valor_maximo">Valor máximo</string>
    <string name="busca_data_inicio">Data início</string>
    <string name="busca_data_final">Data final</string>
    <string name="bebidas">Bebidas</string>
    <string name="cancelar">Cancelar</string>
    <string name="com_facebook_send_button_text">Enviar</string>
    <string name="com_facebook_share_button_text">Compartilhar</string>
    <string name="cadastre_se"><u>Cadastre-se</u></string>
    <string name="cadastre_se_com">Cadastre-se com </string>
    <string name="cadastre_se_com_google"><u>Google+</u></string>
    <string name="cadastre_se_com_facebook"><u>Facebook</u></string>
    <string name="cadastro_meus_dados">Meus dados</string>
    <string name="cadastro_nome">Nome</string>
    <string name="cadastro_sobrenome">Sobrenome</string>
    <string name="cadastro_genero">Gênero</string>
    <string name="cadastro_data_nascimento">Data de nascimento</string>
    <string name="cadastro_email">E-mail*</string>
    <string name="cadastro_email_nao_obrigatorio">E-mail</string>
    <string name="cadastro_documento">Documento</string>
    <string name="cadastro_nova_senha">Nova senha*</string>
    <string name="cadastro_confirma_nova_senha">Repetir senha*</string>
    <string name="cadastro_alterar_senha">Alterar senha</string>
    <string name="comentarios">comentários</string>
    <string name="chef">Chef</string>
    <string name="compra_individual">Individual</string>
    <string name="compra_duplo">Duplo</string>
    <string name="compra_total">Total:</string>
    <string name="criar_evento_passo_um">1</string>
    <string name="criar_evento_passo_dois">2</string>
    <string name="criar_evento_passo_tres">3</string>
    <string name="criar_evento_passo_quatro">4</string>
    <string name="criar_evento_passo_cinco">5</string>
    <string name="criar_evento_passo_um_desc">1 - Local</string>
    <string name="criar_evento_passo_dois_desc">2 - Cardápio</string>
    <string name="criar_evento_passo_tres_desc">3 - Data e valor</string>
    <string name="criar_evento_passo_quatro_desc">4</string>
    <string name="criar_evento_passo_cinco_desc">5</string>
    <string name="criar_evento_local">Local</string>
    <string name="criar_evento_cardapio">Cardápio</string>
    <string name="criar_evento_data_valor">Data/Valor</string>
    <string name="criar_evento_publique_divulgue">Publique e divulgue</string>
    <string name="criar_evento_acompanhe">Acompanhe</string>
    <string name="cadastro_local_nome">Nome do local</string>
    <string name="cadastro_local_descricao">Descrição</string>
    <string name="cadastro_local_estacionamento">Estacionamento</string>
    <string name="cadastro_local_logradouro">Logradouro</string>
    <string name="cadastro_local_endereco">Endereço</string>
    <string name="cadastro_local_numero">Número</string>
    <string name="cadastro_local_cep">CEP</string>
    <string name="cadastro_local_bairro">Bairro</string>
    <string name="cadastro_local_cidade">Cidade</string>
    <string name="cadastro_local_estado">Estado</string>
    <string name="cadastro_local_informe_local">Digite um local ou CEP</string>
    <string name="cadastro_cardapio_titulo">Título</string>
    <string name="cadastro_cardapio_tipo">Tipo</string>
    <string name="cadastro_cardapio_menu">Menu</string>
    <string name="cadastro_cardapio_descricao">Descrição</string>
    <string name="cadastro_cardapio_bebidas">Bebidas</string>
    <string name="cadastro_cardapio_tipo_cozinha">Tipo de cozinha</string>
    <string name="cadastro_cardapio_outras_informacoes">Outras informações</string>
    <string name="cadastro_data_valor_tipo_evento">Tipo de evento</string>
    <string name="cadastro_data_valor_inicio">Início</string>
    <string name="cadastro_data_valor_termino">Término</string>
    <string name="cadastro_data_valor_forma">Forma</string>
    <string name="cadastro_data_valor_valor">Valor</string>
    <string name="cadastro_data_valor_numero_max_convidados">Número máximo de convidados</string>
    <string name="cadastro_data_valor_promocao_duas_pessoas">Promoção para 2 pessoas</string>
    <string name="cadastro_data_valor_promocao_compra_antecipada">Valor para compra antecipada</string>
    <string name="cadastro_data_valor_promocional">Valor promocional</string>
    <string name="cadastro_data_valor_data_compra_antecipada">Data limite</string>
    <string name="cadastro_data_valor_politica_cancelamento">Política de cancelamento</string>
    <string name="cadastro_data_valor_politica_nao_comparecimento">Política de não comparecimento</string>
    <string name="data">Data:</string>
    <string name="descricao">Descrição</string>
    <string name="detalhes">Detalhes</string>
    <string name="digite_seu_email_para_recuperar_senha">Digite seu e-mail para recuperar a senha</string>
    <string name="entrar_com">Entrar com</string>
    <string name="evento">Evento:</string>
    <string name="evento_realizado">Evento Realizado</string>
    <string name="evento_quantidade_localizados">Foram localizados %1$d eventos.</string>
    <string name="enviar">Enviar</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="esqueceu_sua_senha_recupere_aqui"><u>Recupere aqui</u></string>
    <string name="estacionamento">Estacionamento</string>
    <string name="facebook">Facebook</string>
    <string name="fotos_local">Fotos do local</string>
    <string name="foto_principal_destaque">Foto principal para destaque.</string>
    <string name="foto_divulgacao_emails_redes_sociais">Foto divulgação para emails e redes sociais.</string>
    <string name="google">Google+</string>
    <string name="genero_masculino">Masculino</string>
    <string name="genero_feminino">Feminino</string>
    <string name="gcm_sender_id">154124496069</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_resumo">Resumo</string>
    <string name="hint_sobrenome">Sobrenome</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_rede_social_facebook">https://www.facebook.com.br</string>
    <string name="hint_rede_social_google_plus">https://plus.google.com</string>
    <string name="hint_rede_social_whatsapp">WhatsApp</string>
    <string name="hint_rede_social_youtube">YouTube</string>
    <string name="hint_rede_social_twitter">Twitter</string>
    <string name="hint_rede_social_linkedin">LinkedIn</string>
    <string name="hint_rede_social_instagram">Instagram</string>
    <string name="hint_local">Local</string>
    <string name="hint_local_cep">Nome do local ou CEP</string>
    <string name="hint_data">--/--/--</string>
    <string name="hint_digite_o_nome">Digite o nome</string>
    <string name="hint_digite_a_mensagem">Digite a mensagem...</string>
    <string name="hint_descricao_cardapio">Ex: Entrada: Misto de Folhas Verdes.  Prato Principal: Ostras gratinadas com arroz... Sobremesa: Abacaxi Flambado com Conhaque</string>
    <string name="hint_numero_celular">Número do celular</string>
    <string name="infra_msg_aguarde">Aguarde …</string>
    <string name="infra_msg_network_indisponivel">Conexão de dados indisponível no momento. Verifique suas configurações de rede e tente novamente.</string>
    <string name="infra_msg_erro_sql">Ocorreu um erro ao processar comando sql.</string>
    <string name="infra_msg_erro_io">Erro de comunicação com o servidor.</string>
    <string name="infra_msg_erro">Ocorreu um erro ao processar a transação.\nPor favor tentar novamente.</string>
    <string name="infra_msg_erro_timeout">Tempo de espera esgotado. Por favor tente novamente.</string>
    <string name="infra_msg_retorno_invalido_servidor">Retorno inválido do servidor. Por favor, tente novamente.</string>
    <string name="infra_msg_retorno_vazio_servidor">Nenhuma informação retornada pelo servidor. Por favor, tente novamente.</string>
    <string name="infra_msg_retorno_http_invalido">Retorno HTTP inválido: %1$s</string>
    <string name="indicador_obrigatorio">*</string>
    <string name="importante">Importante</string>
    <string name="ja__e_um_usuario_cheftoshare">Já é um usuário Chef2Share?</string>
    <string name="login"><u>Login</u></string>
    <string name="leia_mais">...leia mais</string>
    <string name="login_erro_google">Ocorreu um erro ao tentar realizar o login pelo Google</string>
    <string name="lista_de_convidados">Lista de convidados</string>
    <string name="menu_cadastro">Cadastro</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_perfil_buscar_eventos">Buscar eventos</string>
    <string name="menu_perfil_procurar">Procurar</string>
    <string name="menu_perfil_convide_chef">Convide um chef</string>
    <string name="menu_perfil_eventos_que_vou">Eventos que vou</string>
    <string name="menu_perfil_meus_pedidos">Meus Pedidos</string>
    <string name="menu_perfil_funcionalidades">Funcionalidades</string>
    <string name="ou"> ou </string>
    <string name="rede_social">Rede social</string>
</resources>