<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    android:orientation="vertical">

    <include layout="@layout/include_header" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cinza_claro"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/margin">

                <FrameLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp">

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_circle_foto_perfil"
                        />

                    <br.com.chef2share.view.RoundedImageView
                        android:layout_gravity="center"
                        android:id="@+id/imgFotoPerfil"
                        style="@style/btn_foto_perfil"
                        android:layout_width="98dp"
                        android:layout_height="98dp" />
                </FrameLayout>

                <ImageButton
                    android:id="@+id/btnTirarFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_take_photo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cadastro_meus_dados"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />


                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"
                    android:shrinkColumns="1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cadastro_nome" />

                        <EditText
                            style="@style/editText"
                            android:id="@+id/txtNome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin"
                            android:hint="@string/hint_nome" />

                    </TableRow>


                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cadastro_genero" />

                        <Spinner
                            style="@style/editText"
                            android:id="@+id/spinnerGenero"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginLeft="@dimen/margin" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:text="@string/cadastro_data_nascimento" />

                        <Button
                            android:id="@+id/btnDataNascimento"
                            style="@style/editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin" />

                    </TableRow>

                    <TableRow android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:text="@string/cadastro_documento" />

                        <EditText
                            android:id="@+id/tDocumento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin" />

                    </TableRow>

                    <TableRow
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cadastro_email_nao_obrigatorio" />

                        <EditText
                            style="@style/editText"
                            android:enabled="false"
                            android:id="@+id/txtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin"
                            android:hint="@string/hint_email" />

                    </TableRow>

                </TableLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"

                    >

                    <View
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:background="@color/chef_cinza_claro" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingLeft="@dimen/margin"
                        android:paddingRight="@dimen/margin"
                        android:text="@string/rede_social"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
                    />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:background="@color/chef_cinza_claro" />
                </LinearLayout>


                <EditText
                    style="@style/editText"
                    android:id="@+id/txtRedeSocialFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_facebook_icon"
                    android:hint="@string/hint_rede_social_facebook"
                    android:inputType="textUri"
                    android:paddingLeft="@dimen/margin" />

                <EditText
                    style="@style/editText"
                    android:id="@+id/txtRedeSocialGooglePlus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@drawable/ic_action_google_icon"
                    android:hint="@string/hint_rede_social_google_plus"
                    android:inputType="textUri"
                    android:paddingLeft="@dimen/margin" />

                <EditText
                    style="@style/editText"
                    android:id="@+id/txtRedeSocialWhatsApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@drawable/ic_action_whatsapp_icon"
                    android:hint="@string/hint_rede_social_whatsapp"
                    android:inputType="phone"
                    android:paddingLeft="@dimen/margin" />

                <Button
                    android:id="@+id/btnSalvar"
                    style="@style/btn_simples_laranja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/btn_salvar" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@color/cinza_claro"
                android:padding="@dimen/margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cadastro_alterar_senha"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />


                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cadastro_nova_senha" />

                        <EditText
                            style="@style/editText"
                            android:id="@+id/tNovaSenha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin"
                            android:inputType="textPassword" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cadastro_confirma_nova_senha" />

                        <EditText
                            style="@style/editText"
                            android:id="@+id/tConfirmaNovaSenha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin"
                            android:inputType="textPassword" />

                    </TableRow>

                </TableLayout>

                <Button
                    android:id="@+id/btnAlterarSenha"
                    style="@style/btn_simples_laranja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/btn_alterar_senha" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>
